<resources>
    <string name="app_name">ParkHere</string>

    <!-- Field Hints/Labels. -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_out">Sign Out</string>
    <string name="report_issue">Report an issue</string>
    <string name="listing_name">Name of your listing</string>
    <string name="listing_description">Describe your listing</string>
    <string name="parking_description">Describe your parking spot</string>
    <string name="handicap_label">Handicap-friendly?</string>
    <string name="covered_label">Covered?</string>
    <string name="compact_label">Compact?</string>
    <string name="booking_count_label">Sort by Most Booked</string>
    <string name="suv_label">SUV-friendly?</string>
    <string name="truck_label">Truck-friendly?</string>
    <string name="upload_parking_image">Upload parking image</string>
    <string name="submit">Submit</string>
    <string name="listing_price">$ Price</string>
    <string name="search_within_daterange">Search within date range</string>
    <string name="dates_available">Dates space is available</string>
    <string name="submit_review">Submit Review</string>
    <string name="parking_spot_name">Name of your parking spot</string>
    <string name="select_parking_spot">Select the parking space</string>
    <string name="increment_hour_explanation">Select the # of hours per increment</string>

    <string name="start_time_label">Start Time Label</string>
    <string name="end_time_label">End Time Label</string>

    <string name="edit_spot">Edit parking spot</string>
    <string name="delete_parking_spot">Delete parking spot</string>
    <string name="post_parking_spot">Post a parking spot</string>
    <string name="edit_parking_spot">Edit the listing</string>

    <string name="delete_listing">Delete Listing</string>
    <string name="post_listing">Post a listing</string>
    <string name="search">Search</string>
    <string name="edit_listing">Edit the listing</string>
    <string name="leave_review">Rate the parking spot from 1 to 5 stars and leave a comment!</string>

    <string name="listing">My Listings</string>
    <string name="booking">My Bookings</string>
    <string name="balance">My Balance</string>
    <string name="profile">My Profile</string>
    <string name="parking_spot">My Parking Spots</string>
    <string name="upload_picture">Upload profile image</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="select_picture">Select Picture</string>
    <string name="confirm">Confirm</string>
    <string name="book_listing">Book this listing</string>
    <string name="filter">Filter</string>
    <string name="filters">Filters</string>
    <string name="avg_parking_price">Average Parking Price (from ParkWhiz): $</string>
    <string name="avg_parking_price_not_found">Average Parking Price (from ParkWhiz): No data found</string>
    <string name="start_date">Start date</string>
    <string name="stop_date">Stop date</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="time_increment">Minimum Time Increment</string>
    <string name="num_increments">Number of Increments</string>
    <string name="review">Review</string>
    <string name="review_text_placeholder">Leave a comment!</string>
    <string name="current_balance">Current Balance</string>
    <string name="are_you_providing">Will you be providing parking spots?</string>
    <string name="transfer_to_bank">Transfer balance to bank account</string>
    <string name="no_booking_payments">No pending booking payments to confirm</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- Placeholder strings for adapter views. -->
    <string name="location_label">Location label</string>
    <string name="date_range">startDate - endDate</string>
    <string name="booking_label">Booking label</string>
    <string name="results_label">Results label</string>
    <string name="distance_label">Distance label</string>

    <!-- Strings for cancellation policies-->
    <string name="refundable_policy">Refundable</string>
    <string name="nonrefundable_policy">Nonrefundable</string>
    <string name="flexible_policy">Flexible</string>
    <string name="moderate_policy">Moderate</string>
    <string name="strict_policy">Strict</string>
    <string name="superstrict30_policy">Super Strict 30</string>
    <string name="superstrict60_policy">Super Strict 60</string>
    <string name="longterm_policy">Long Term</string>
    <string name="cancellation_policy">Cancellation Policy</string>

    <!-- Transaction strings-->
    <string name="choose_payment">Choose your payment method</string>
    <string name="paypal_button">Paypal</string>
    <string name="credit_card_button">Credit Card</string>
    <string name="credit_card_type">Credit Card Information</string>
    <string name="cc_type">Credit Card Type</string>
    <string name="name_on_card">Name on Card</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="security_number">Security Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="mastercard">Mastercard</string>
    <string name="visa">Visa</string>
    <string name="american_express">American Express</string>
    <string name="discover">Discover</string>
    <string name="billing_address">Billing Address</string>

    <string name="address_line">Address</string>
    <string name="city_line">City</string>
    <string name="state_line">State</string>
    <string name="zipcode_line">Zip Code</string>

    <string name="paypal_email">Paypal Email</string>
    <string name="validate">Validate</string>
    <string name="paypal_instructions">Please enter your paypal information to validate payment.</string>

    <!-- Transaction stuff -->
    <string name="confirmation_header">Please confirm the following information is correct.</string>
    <string name="listing_details">Listing Details</string>
    <string name="billing_information">Billing Information</string>
    <string name="parking_spot_details">Parking Spot Details</string>

    <string name="booking_details">Booking Details</string>
    <string name="place_booking">Place Booking</string>
    <string name="expiration_date_month_year"> Expiration Date (Month and Year)</string>

    <string name="reviews">My Reviews</string>
    <string name="rating">Rating</string>
    <string name="confirm_payment">Confirm Booking Payments</string>
    <string name="confirm_payment_amount">$</string>
    <string name="cancel_booking">Cancel Booking</string>

    <string name="hi">Hi</string>
    <string name="login_welcome">Welcome to ParkHere</string>
    <string name="solve_parking">Let\'s solve parking together</string>

    <string name="search_by_address">Search by address:</string>

    <string name="or_search_by">Or search by coordinates:</string>
    <string name="other_options">Other search options:</string>


    <string name="search_by_currentlocation">Search by Current Location</string>

    <string name="listing_details_name"> Listing Details Name </string>
    <string name="listing_details_description"> Listing Details Description</string>
    <string name="listing_details_start_time"> Listing Details Start Time</string>
    <string name="listing_details_end_time"> Listing Details End Time</string>
    <string name="listing_details_distance_away"> Listing Details Distance Away</string>
    <string name="listing_details_price"> Listing Details Price</string>
    <string name="listing_details_refundable"> Listing Details Refundable</string>
    <string name="listing_details_handicap"> Listing Details Handicap</string>
    <string name="listing_details_covered"> Listing Details Covered</string>
    <string name="listing_details_compact"> Listing Details Compact</string>

    <string name="parking_spot_details_name"> Parking Spot Details Name </string>
    <string name="parking_spot_details_location"> Parking Spot Details Location</string>
    <string name="parking_spot_details_handicap"> Parking Spot Details Handicap</string>
    <string name="parking_spot_details_covered"> Parking Spot Details Covered</string>
    <string name="parking_spot_details_compact"> Parking Spot Details Compact</string>

    <string name="parking_spot_reviews">Parking Spot Reviews</string>

    <string name="post_at_currentlocation">Post at Current Location</string>

    <string-array name="time_increment_spinner_label">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

